force-app/main/default/objects/Usage_Data__c/Usage_Data__c.object-meta.xml
<CustomObject>
    <label>Usage Data</label>
    <nameField>
        <displayFormat>USD-{0000000}</displayFormat>
        <label>Usage Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>