force-app/main/default/objects/Usage_Data__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger / Light Truck Tires</fullName>
            </value>
            <value>
                <fullName>Medium Truck Tires</fullName>
            </value>
            <value>
                <fullName>Off-Road Tires (Except Large)</fullName>
            </value>
            <value>
                <fullName>Tires less than or equal to 700 kg</fullName>
            </value>
            <value>
                <fullName>Large tires greater than 700 kg</fullName>
            </value>
            <value>
                <fullName>Number of times you accepted more than 10 tires from a person in a single day</fullName>
            </value>
            <value>
                <fullName>Shavings, Strips, Buffings and Trimmings</fullName>
            </value>
            <value>
                <fullName>Crumb rubber</fullName>
            </value>
            <value>
                <fullName>Tire-derived mulch</fullName>
            </value>
            <value>
                <fullName>Tire-derived aggregate</fullName>
            </value>
            <value>
                <fullName>Tire-derived rubber strips and chunks</fullName>
            </value>
            <value>
                <fullName>Fluff and fibre</fullName>
            </value>
            <value>
                <fullName>Tire-derived metal (no rims)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mulch, all applications, excluding landfill drainage chips</fullName>
            </value>
            <value>
                <fullName>Landscaping products (not mulch), including tree rings and pavers</fullName>
            </value>
            <value>
                <fullName>Sporting and playground equipment</fullName>
            </value>
            <value>
                <fullName>Flooring products, including agricultural applications</fullName>
            </value>
            <value>
                <fullName>Sound proofing products</fullName>
            </value>
            <value>
                <fullName>Roofing applications</fullName>
            </value>
            <value>
                <fullName>Blasting mats</fullName>
            </value>
            <value>
                <fullName>Ballistic products</fullName>
            </value>
            <value>
                <fullName>Bases, e.g., pylon and post bases</fullName>
            </value>
            <value>
                <fullName>Blocks, including wheel chocks</fullName>
            </value>
            <value>
                <fullName>Equipment feet, e.g., ladder and furniture feet</fullName>
            </value>
            <value>
                <fullName>Vehicle splash guards, mud flaps and floor mats</fullName>
            </value>
            <value>
                <fullName>Ramps</fullName>
            </value>
            <value>
                <fullName>Rubberized asphalt</fullName>
            </value>
            <value>
                <fullName>Speed bumps and parking curbs</fullName>
            </value>
            <value>
                <fullName>Cable guards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>