force-app/main/default/objects/Usage_Data__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Units</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>