force-app/main/default/objects/Usage_Data__c/fields/isCollected__c.field-meta.xml
<CustomField>
    <fullName>isCollected__c</fullName>
    <formula>TEXT(Usage_Summary__r.Type__c) = &apos;Collected&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCollected</label>
    <type>Checkbox</type>
</CustomField>