force-app/main/default/objects/Usage_Data__c/fields/isRecovered__c.field-meta.xml
<CustomField>
    <fullName>isRecovered__c</fullName>
    <formula>TEXT(Usage_Summary__r.Type__c) = &apos;SENT_TO_RETREADER&apos; || TEXT(Usage_Summary__r.Type__c) = &apos;PROCESSED_MATERIALS&apos; || TEXT(Usage_Summary__r.Type__c) = &apos;REUSED_ON_VEHICLES&apos; || TEXT(Usage_Summary__r.Type__c) = &apos;REUSE_FOR_A_NEW_PURPOSE&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRecovered</label>
    <type>Checkbox</type>
</CustomField>