force-app/main/default/objects/Usage_Data__c/fields/isReportSubmitted__c.field-meta.xml
<CustomField>
    <fullName>isReportSubmitted__c</fullName>
    <formula>TEXT( Report_Submission__r.Status__c ) = &quot;Submitted&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isReportSubmitted</label>
    <type>Checkbox</type>
</CustomField>