force-app/main/default/objects/Usage_Data__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Data (Related Account)</relationshipLabel>
    <relationshipName>Usage_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>