force-app/main/default/objects/Usage_Data__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>Usage_Summary__r.Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>