force-app/main/default/objects/Usage_Data__c/fields/Summary_Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Summary_Producer_Account__c</fullName>
    <formula>Usage_Summary__r.Producer_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Producer Account</label>
    <type>Text</type>
</CustomField>