force-app/main/default/objects/Usage_Data__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <formula>IF (isCollected__c, Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>