force-app/main/default/objects/Usage_Data__c/fields/Total_Recovered__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovered__c</fullName>
    <formula>IF(isRecovered__c, Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>