force-app/main/default/objects/Usage_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>High-volume Drop-off</fullName>
            </value>
            <value>
                <fullName>Shavings, Strips, Buffings and Trimmings</fullName>
            </value>
            <value>
                <fullName>Processed Materials</fullName>
            </value>
            <value>
                <fullName>Product List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>