force-app/main/default/objects/Usage_Data__c/fields/Usage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Usage_Summary__c</fullName>
    <label>Usage Summary</label>
    <referenceTo>Usage_Summary__c</referenceTo>
    <relationshipLabel>Usage Data</relationshipLabel>
    <relationshipName>Usage_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>