force-app/main/default/objects/Usage_Data__c/validationRules/Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Error</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(Count__c)</errorConditionFormula>
    <errorMessage>TEST!</errorMessage>
</ValidationRule>