force-app/main/default/objects/Usage_Data__c/validationRules/Validate_Negative_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Negative_Numbers</fullName>
    <active>true</active>
    <errorConditionFormula>Count__c&lt;0||Quantity__c&lt;0</errorConditionFormula>
    <errorMessage>Values cannot be negative!</errorMessage>
</ValidationRule>